--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
             overflow: hidden;
             background: #2f2f2f;
             border: 8px solid #654321;
+            border-left-width: 16px;
+            border-right-width: 16px;
             border-radius: 1rem;
             padding: 1.5rem 3vw;
             width: 100vw;
