--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
             flex-direction: column;
             overflow: hidden;
             background: #2f2f2f;
-            /*border: 8px solid #654321;*/
-            /*border-left-width: 16px;*/
-            /*border-right-width: 16px;*/
-            /*border-radius: 1rem;*/
+            border: 8px solid #654321;
+            border-left: none;
+            border-right: none;
+            border-radius: 1rem;
             padding: 1.5rem 3vw;
             width: 100vw;
             height: 100vh;
