Changed: Added a bottom margin to the tap description to prevent overlap with the price

--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
         }
         .tap-description {
             margin-top: 0.3rem;
+            margin-bottom: 1.2rem;
             font-size: 0.95rem;
             color: #ddd;
         }
